--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.137",
-    "@mui/material": "^5.14.2"
+    "@mui/material": "^5.14.2",
+    "react-router-dom": "^6.14.2"
   }
 }
