--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.137",
     "@mui/material": "^5.14.2",
+    "@mui/x-data-grid": "^6.10.2",
     "react-router-dom": "^6.14.2"
   }
 }
