--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # personal
-test_data
-*/testData.js
+test_data.txt
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
