--- a/requirements.txt
+++ b/requirements.txt
@@ -8,18 +8,19 @@ Django==4.2.3
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 idna==3.4
+javalang==0.13.0
+ply==3.11
 psycopg2-binary==2.9.6
 pycparser==2.21
 PyGithub==1.59.0
 PyJWT==2.8.0
 PyNaCl==1.5.0
+pypdf==3.14.0
 pytz==2023.3
 requests==2.31.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==2.0.4
 wrapt==1.15.0
-pypdf==3.14.0
-slimit==0.8.1
-javalang==0.13.0
