--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
+ast-comments==1.1.0
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
+comment-parser==1.2.4
 cryptography==41.0.2
 Deprecated==1.2.14
 Django==4.2.3
@@ -16,6 +18,8 @@ PyGithub==1.59.0
 PyJWT==2.8.0
 PyNaCl==1.5.0
 pypdf==3.14.0
+python-magic==0.4.24
+python-magic-bin==0.4.14
 pytz==2023.3
 requests==2.31.0
 six==1.16.0
