--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ python-magic==0.4.24
 python-magic-bin==0.4.14
 pytz==2023.3
 requests==2.31.0
+rope==1.9.0
 six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
