--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 ast-comments==1.1.0
+autopep8==2.0.4
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -14,6 +15,7 @@ javalang==0.13.0
 ply==3.11
 psycopg2-binary==2.9.6
 pycparser==2.21
+pyflakes==3.1.0
 PyGithub==1.59.0
 PyJWT==2.8.0
 PyNaCl==1.5.0
